<resources>
    <string name="app_name">Smart Calendar</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="login_fragment_label">Login Page</string>
    <string name="calendar_fragment_label">My meeting calendar</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="logout">Logout</string>
    <string name="meeting_detail_manage">Manage</string>
    <string name="meeting_detail_name">Meeting name</string>
    <string name="meeting_detail_type_message">Type message...</string>
    <string name="meeting_management_manage">Manage meeting</string>
    <string name="meeting_management_adress">Adress</string>
    <string name="meeting_management_change_time">Change time</string>
    <string name="save_changes">Save changes</string>
    <string name="meeting_management_add_friend">+ Add friend</string>
    <string name="meeting_members">Meeting members</string>
    <string name="duration">Duration</string>
    <string name="add_friend">Add friend</string>
    <string name="received_invites">Received friend invites</string>
    <string name="sent_invites">Sent friend invites\n</string>
    <string name="invite">Invite</string>
    <string name="username">Username</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="cancel">Cancel</string>
    <string name="friends">Friends</string>
    <string name="incoming_meetings">Incoming Today</string>
    <string name="departure_time">Departure: %1$s</string>
    <string name="distance">Distance: %1$s</string>
    <string name="open_maps">Open in Maps</string>
    <string name="location_label">Location: %1$s</string>
    <string name="no_location">No location</string>
</resources>